...
    <string name="unable_to_delete">Currently unable to delete your account, try again later.</string>
    <string name="email_required">An email is required.</string>
    <string name="enter_valid_email">Please enter a valid email.</string>
    <string name="account_exists">An account with that email address already exists.</string>
    <string name="password_length">Your password must be at least 6 characters long.</string>
    <string name="confirm_password_warning">You must confirm your password.</string>
    <string name="unmatched_passwords">Your password entries did not match, please try again.</string>
    <string name="username_required">A username is required.</string>
    <string name="username_taken">That username is already taken.</string>
    <string name="failed_to_login">Failed to sign in, please try again.</string>
    <string name="password_required">A password is required.</string>
    <string name="review_needs_title">Review must have a title.</string>
    <string name="review_needs_score">Review needs a score.</string>
    <string name="score_bounds">Score must be between 1.0 and 5.0.</string>
    <string name="score_must_be_number">Score must be a number</string>
    <string name="must_enter_code">You must enter a code to search.</string>
    <string name="failed_to_create_account">We failed to create your account.</string>
    <string name="getting_product_information">Searching for this product&#8230;</string>
    <string name="getting_account_information">Getting your account info&#8230;</string>
    <string name="account_retrieval_failed">Failed to get account information at this time.</string>
    <string name="cannot_update_account">We could not update your account.</string>
    <string name="unable_to_make_review">Unable to make your review at this time.</string>
...
